--- a/project/ontheroad/css/global.css
+++ b/project/ontheroad/css/global.css
@@ -473,7 +473,7 @@ audio {
     opacity: 1;
   }
   32% {
-    opacity: 0
+    opacity: 0;
   }
 }
 @-webkit-keyframes txt2 {
@@ -484,7 +484,7 @@ audio {
     opacity: 1;
   }
   32% {
-    opacity: 0
+    opacity: 0;
   }
 }
 @-webkit-keyframes txt3 {
@@ -495,7 +495,7 @@ audio {
     opacity: 1;
   }
   68% {
-    opacity: 0
+    opacity: 0;
   }
 }
 @-webkit-keyframes txt4 {
@@ -506,7 +506,7 @@ audio {
     opacity: 1;
   }
   68% {
-    opacity: 0
+    opacity: 0;
   }
 }
 @-webkit-keyframes music {
@@ -618,7 +618,6 @@ audio {
   100% {
     opacity: 1
   }
-  ;
 }
 #swipe-box1.swiper-slide-active .click {
   position: absolute;
@@ -896,7 +895,6 @@ audio {
   100% {
     opacity: 1
   }
-  ;
 }
 #swipe-box2.swiper-slide-active .click {
   position: absolute;
@@ -1196,7 +1194,6 @@ audio {
   100% {
     opacity: 1
   }
-  ;
 }
 #swipe-box4.swiper-slide-active .girl {
   position: absolute;
